# az-devops-rusting-prs

./: .gitignore  Cargo.toml
src/: main.rs
